HIVE-21228: Replace all occurences of new Integer with Integer.valueOf (Ivan Suller via Zoltan Haindrich)
Signed-off-by: Zoltan Haindrich <kirk@rxd.hu>