@@ -1082,10 +1082,11 @@ public abstract class Operator<T extends OperatorDesc> implements Serializable,C
   }
 
   public String dump(int level, HashSet<Integer> seenOpts) {
-    if (seenOpts.contains(new Integer(id))) {
+    Integer idObj = Integer.valueOf(id);
+    if (seenOpts.contains(idObj)) {
       return null;
     }
-    seenOpts.add(new Integer(id));
+    seenOpts.add(idObj);
 
     StringBuilder s = new StringBuilder();
     String ls = getLevelString(level);
